[metadata]
name = pysyphe
author = Adrian Vandier Ast
author-email = adrian.vandierast@sewan.fr
summary = Python lib to manage rollback.
description-file = README.md
home-page = https://gitlab.priv.sewan.fr/sophia/pysyphe
license =
classifier =
keywords =

[files]
packages =
    pysyphe

[entry_points]
#console_scripts =

[testenv]
deps = -rtests/requirements.txt
       -rrequirements.txt
envlist = py27,py36

[testenv:py27]
commands =
  pytest \
        --cov=pysyphe --cov-report=\
        {posargs}

[testenv:py36]
commands =
  pytest \
        --cov=pysyphe --cov-append --cov-report term --cov-report html\
        {posargs}

[testenv:py34]
commands =
  pytest \
        --cov=pysyphe --cov-append --cov-report term --cov-report html\
        {posargs}

[tool:pytest]
addopts = -rfEsx --tb=short

[coverage:run]
omit =
    # omit anything in a .local directory anywhere
    */.tox/*
    # omit everything in /usr
    /usr/*
[coverage:xml]
output = reports/cover.xml
[coverage:html]
directory = reports/html_report

[flake8]
ignore= E501
